--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Sửa ngày nghỉ" %>
 
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+<div class="w-full">
   <div class="mb-6">
     <nav class="flex mb-4" aria-label="Breadcrumb">
       <ol class="flex items-center space-x-2">
